samples/_failures_safe/1761517115_df0eec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16e6ebf8.c: In function ‘main’:
./samples/SAFE/__tmp_16e6ebf8.c:163:25: error: ‘create’ undeclared (first use in this function)
  163 |     TokenStack* stack = create
      |                         ^~~~~~
./samples/SAFE/__tmp_16e6ebf8.c:163:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_16e6ebf8.c:163:5: error: expected ‘,’ or ‘;’ at end of input
  163 |     TokenStack* stack = create
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_16e6ebf8.c:163:5: error: expected declaration or statement at end of input
